--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-</body>
     <h1>Este es mi primer repositorio </h1>
-    <a href="#">#</a>
+
+    <nav>
+        <a href="#"></a>
+    </nav>
+</body>
 </html>
